app flutter : most features for astronaut drivers work well